# WalleteriumImperium

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLOUD_RUN_DEPLOYMENT_GUIDE.md  DEPLOYMENT.md  Dockerfile  Dockerfile.dev  IMPLEMENTATION_SUMMARY.md  MVP_COMPLETE_SUMMARY.md  MVP_MODELS_UPDATE.md  PROJECT_RASEED_COMPLETE_DOCUMENTATION.md  README.md  TESTING.md  TESTING_IMPLEMENTATION.md  TRANSACTION_RAG_SETUP.md  debug_startup.py  deploy-optimized.bat  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  service.yaml  storage-lifecycle.json  test_consolidated_storage.py  test_simplified_agent.py
agents/onboarding_agent/: README.md  agent.py  prompts.py  schemas.py
app/: __init__.py  models.py
config/: constants.py  settings.py
deploy/: build-and-deploy.sh  deploy-windows.bat  setup-gcp.sh
deployment/: README.md
docs/: Google Cloud Agentic AI developer resource guide.txt  Google Cloud Agentic AI hackathon.txt  Google hackathon Problem statement.txt  consolidated.txt
receipt_scanner/: README.md  __init__.py  agent.py  enrichment.py  gemini_processor.py  models.py  processors.py  requirements.txt  storage.py
scripts/: build_rag_index.py  populate_dummy_transactions.py  populate_investor_profile.py  real_receipt_result_miami-floridael-chalan-restaurant-peruvian-foodcheck-receipt-bill-FWREE7.json  setup_local.py  test_api.py  test_api_unified.py  test_enhanced_receipt.py  test_onboarding_flow.py  test_real_receipt.py  test_receipt.py  test_transaction_rag.py  test_video_receipt.py
weather_bot/: __init__.py
(+39 files in other folders)
