[project]
name = "receipt-scanner"
version = "0.1.0"
description = "A comprehensive AI-powered receipt processing agent that supports text, Excel, PDF, image, and video inputs using Google's Agent Development Kit (ADK), Gemini 2.5 Flash for vision AI, and LLM enrichment for structured data extraction."
authors = [
    {name = "Receipt Scanner Team", email = "team@receiptscannerag.com"}
]
license = "Apache License 2.0"
readme = "README.md"
packages = [{include = "receipt_scanner"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.1"
google-adk = { version = ">=0.5.0", extras = ["eval"] }
google-cloud-aiplatform = {extras = ["adk", "agent-engines"], version = "^1.88.0"}
google-generativeai = "^0.8.3"
pydantic = "^2.10.6"
python-dotenv = "^1.0.1"
pillow = "^10.3.0"
opencv-python = "^4.8.1.78"
aiofiles = "^23.2.1"
aiosqlite = "^0.19.0"
pymupdf = "^1.23.26"
openpyxl = "^3.1.2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
google-adk = { version = ">=1.3.0", extras = ["eval"] }
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
pytest-mock = "^3.11.1"
coverage = "^7.3.2"

[tool.poetry.group.deployment]
optional = true

[tool.poetry.group.deployment.dependencies]
absl-py = "^2.2.1"
pandas = "^2.1.1"
google-cloud-storage = "^2.10.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api" 